refactor: Java 구버전 코드를 현대 구조로 리팩터링 + feat: 관리자 통계 UI (TASK_WEB Step 8)
[Java 리팩터링]
- JwtProperties, RateLimitProperties → record + @DefaultValue
- SampleValidationRequest, ErrorResponse, FieldError → record
- Collectors.toList() → .toList(), String.format → .formatted()
- record 접근자 적용 (getXxx → xxx)

[관리자 통계 UI]
- AdminStatsPage: 가입·로그인·글 통계 API 연동
- StatsChart, StatsTable 컴포넌트 (Recharts)
- 기간 필터, 단위 선택 (일/주/월/분기/년)
- /admin/stats 라우트 및 네비게이션 연결

Co-authored-by: Cursor <cursoragent@cursor.com>